--- a/Project/about.html
+++ b/Project/about.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width">
     <title>Document</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="front/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.html" />
 
     <meta name="viewport"
         content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
-    <link rel="shortcut icon" type="image/x-icon" href="front/img/favicon/favicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon/favicon.svg">
 
 
 
@@ -57,9 +57,9 @@
         <div class="container">
             <div class="header__bottom">
                 <nav class="navbar navbar-expand-lg ">
-                    <a href="index.html" class="logo order-3 d-none d-sm-block"><img src="front/img/logo/logo.svg"
+                    <a href="index.html" class="logo order-3 d-none d-sm-block"><img src="assets/img/logo/logo.svg"
                             alt="Logo" class="d-block"></a>
-                    <a href="index.html" class="logo order-3 d-sm-none"><img src="front/img/logo/logo-sm.svg" alt="Logo"
+                    <a href="index.html" class="logo order-3 d-sm-none"><img src="assets/img/logo/logo-sm.svg" alt="Logo"
                             class="d-block"></a>
                     <div>
                         <button class="navbar-toggler order-1" type="button" aria-expanded="false"
@@ -78,7 +78,7 @@
                                 class="path4"></span></i></a>
                     <div class="side-menu order-last">
                         <div class="side-menu__head d-lg-none">
-                            <a href="index.html" class="logo  order-3 d-lg-none"><img src="front/img/logo/logo-sm.svg"
+                            <a href="index.html" class="logo  order-3 d-lg-none"><img src="assets/img/logo/logo-sm.svg"
                                     alt="Logo"></a>
                             <i class="icon-close_two_tone close-icon" id="closeIcon"></i>
                         </div>
@@ -276,7 +276,7 @@
             </div>
             <div class="footer-bottom">
                 <div>
-                    <img src="front/img/logo/logo-white.svg" alt="">
+                    <img src="assets/img/logo/logo-white.svg" alt="">
                     <p class="copyright">© 2021 Velocity LTD. Bütün hüquqlar qorunur</p>
                 </div>
                 <div class="social-icons d-none d-md-block">
