--- a/Project/faq.html
+++ b/Project/faq.html
@@ -8,7 +8,7 @@
    <title>Document</title>
    <link href="css/bootstrap.min.css" rel="stylesheet">
    <link href="css/select2.min.css" rel="stylesheet">
-   <link href="front/css/style.css" rel="stylesheet">
+   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -53,9 +53,9 @@
       <div class="container">
          <div class="header__bottom">
             <nav class="navbar navbar-expand-lg ">
-               <a href="index.html" class="logo order-3 d-none d-sm-block"><img src="front/img/logo/logo.svg" alt="Logo"
+               <a href="index.html" class="logo order-3 d-none d-sm-block"><img src="assets/img/logo/logo.svg" alt="Logo"
                      class="d-block"></a>
-               <a href="index.html" class="logo order-3 d-sm-none"><img src="front/img/logo/logo-sm.svg" alt="Logo"
+               <a href="index.html" class="logo order-3 d-sm-none"><img src="assets/img/logo/logo-sm.svg" alt="Logo"
                      class="d-block"></a>
                <div>
                   <button class="navbar-toggler order-1" type="button" aria-expanded="false"
@@ -74,7 +74,7 @@
                         class="path4"></span></i></a>
                <div class="side-menu order-last">
                   <div class="side-menu__head d-lg-none">
-                     <a href="index.html" class="logo  order-3 d-lg-none"><img src="front/img/logo/logo-sm.svg"
+                     <a href="index.html" class="logo  order-3 d-lg-none"><img src="assets/img/logo/logo-sm.svg"
                            alt="Logo"></a>
                      <i class="icon-close_two_tone close-icon" id="closeIcon"></i>
                   </div>
@@ -935,7 +935,7 @@
          </div>
          <div class="footer-bottom">
             <div>
-               <img src="front/img/logo/logo-white.svg" alt="">
+               <img src="assets/img/logo/logo-white.svg" alt="">
                <p class="copyright">© 2021 Velocity LTD. Bütün hüquqlar qorunur</p>
             </div>
             <div class="social-icons d-none d-md-block">
@@ -951,10 +951,7 @@
    </footer>
    <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
    <script src="js/swiper-bundle.min.js"></script>
-   <script src="front/plugins/owl-carousel/js/owl.carousel.min.js"></script>
    <script src="js/select2.min.js"></script>
-   <script src="front/plugins/nice-select/js/jquery.nice-select.min.js"></script>
-   <script src="front/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
    <script src="js/bootstrap.bundle.min.js"></script>
    <script src="js/count-up.js"></script>
    <script src="js/frontfd0f.js?v=6.91"></script>
