--- a/Project/index.html
+++ b/Project/index.html
@@ -11,21 +11,12 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/swiper-bundle.css" rel="stylesheet">
     <link href="css/select2.min.css" rel="stylesheet">
-    <link href="front/plugins/owl-carousel/css/owl.carousel.min.css" rel="stylesheet">
-    <link href="front/plugins/owl-carousel/css/owl.theme.default.min.css" rel="stylesheet">
-    <link href="front/plugins/nice-select/css/nice-select.css" rel="stylesheet">
-    <link href="front/plugins/bootstrap-datepicker/bootstrap-datepicker.css" rel="stylesheet">
-    <link href="front/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link href="css/site8f13.css?v=9.9.9" rel="stylesheet">
-    <script src="front/js/jquery-3.5.1.min.js"></script>
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="">
+    
     <link rel="icon" type="image/png" href="favicon.html" />
-    <meta property="og:url" content="https://velocity.az/">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no">
-    <link rel="shortcut icon" type="image/x-icon" href="front/img/favicon/favicon.svg">
-    <meta name="facebook-domain-verification" content="hhgyaxkkkbdflz5wutd0fgbopnv2ai" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon/favicon.svg">
+   
 
 
 </head>
@@ -35,12 +26,7 @@
 
 
 
-    <div class="fb-customerchat" attribution="setup_tool" page_id="110153937876363">
-    </div>
-
-    <div class="preloader">
-        <div class="spinner"></div>
-    </div>
+   
 
     <header class="header  ">
         <div class="header__top">
@@ -79,9 +65,9 @@
         <div class="container">
             <div class="header__bottom">
                 <nav class="navbar navbar-expand-lg ">
-                    <a href="index.html" class="logo order-3 d-none d-sm-block"><img src="front/img/logo/logo.svg"
+                    <a href="index.html" class="logo order-3 d-none d-sm-block"><img src="assets/img/logo/logo.svg"
                             alt="Logo" class="d-block"></a>
-                    <a href="index.html" class="logo order-3 d-sm-none"><img src="front/img/logo/logo-sm.svg" alt="Logo"
+                    <a href="index.html" class="logo order-3 d-sm-none"><img src="assets/img/logo/logo-sm.svg" alt="Logo"
                             class="d-block"></a>
                     <div>
                         <button class="navbar-toggler order-1" type="button" aria-expanded="false"
@@ -100,7 +86,7 @@
                                 class="path4"></span></i></a>
                     <div class="side-menu order-last">
                         <div class="side-menu__head d-lg-none">
-                            <a href="index.html" class="logo  order-3 d-lg-none"><img src="front/img/logo/logo-sm.svg"
+                            <a href="index.html" class="logo  order-3 d-lg-none"><img src="assets/img/logo/logo-sm.svg"
                                     alt="Logo"></a>
                             <i class="icon-close_two_tone close-icon" id="closeIcon"></i>
                         </div>
@@ -952,7 +938,7 @@
             </div>
             <div class="footer-bottom">
                 <div>
-                    <img src="front/img/logo/logo-white.svg" alt="">
+                    <img src="assets/img/logo/logo-white.svg" alt="">
                     <p class="copyright">© 2021 Velocity LTD. Bütün hüquqlar qorunur</p>
                 </div>
                 <div class="social-icons d-none d-md-block">
@@ -967,10 +953,10 @@
         </div>
     </footer>
     <script src="js/swiper-bundle.min.js"></script>
-    <script src="front/plugins/owl-carousel/js/owl.carousel.min.js"></script>
+    <script src="assets/plugins/owl-carousel/js/owl.carousel.min.js"></script>
     <script src="js/select2.min.js"></script>
-    <script src="front/plugins/nice-select/js/jquery.nice-select.min.js"></script>
-    <script src="front/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+    <script src="assets/plugins/nice-select/js/jquery.nice-select.min.js"></script>
+    <script src="assets/plugins/bootstrap-datepicker/bootstrap-datepicker.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/count-up.js"></script>
     <script src="js/frontfd0f.js?v=6.91"></script>
